sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:8: error: not found: value k
    while (getValue(i-k)>v){
                      ^AlgInsertionSort:9: error: not found: value k
      setValue(i-k+1,getValue(i-k))
                 ^AlgInsertionSort:9: error: not found: value k
      setValue(i-k+1,getValue(i-k))
                                ^AlgInsertionSort:10: error: not found: value k
      indice=i-k
               ^AlgInsertionSort:11: error: not found: value k
      k=k+1
      ^AlgInsertionSort:14: error: not found: value indice
  setValue(indice,v)
           ^